# crates/ingestion/src/router.rs
@@ -2,13 +2,17 @@ use axum::{routing::post, Router};
 use common::AppState;
 use tower_http::trace::TraceLayer;
 
-use crate::github;
+use crate::{github, slack};
 
 pub fn ingestion_router() -> Router<AppState> {
     Router::new()
         .route(
             "/v1/ingest/github",
             post(github::handler::handle_github_webhook),
+        )
+        .route(
+            "/v1/ingest/slack",
+            post(slack::handler::handle_slack_webhook),
         )
         .layer(TraceLayer::new_for_http())
 }
